Fix ScrollBar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,9 @@
     box-sizing: border-box;
 }
 
-
-/* .gamePlay {
+.gamePlay {
     display: none;
-} */
+}
 
 .gameBoard {
     display: none;
@@ -19,8 +18,33 @@ body {
     line-height: 1.6;
 }
 
-body::-webkit-scrollbar {
-    color: whitesmoke;
+
+/* Let's get this party started */
+
+#output::-webkit-scrollbar {
+    width: 1em;
+}
+
+
+/* Track */
+
+#output::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgb(3, 3, 3);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+
+/* Handle */
+
+#output::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(240, 235, 235, 0.8);
+}
+
+#output::-webkit-scrollbar-thumb:window-inactive {
+    background: rgba(240, 235, 235, 0.8)
 }
 
 header {
@@ -271,7 +295,7 @@ input {
 #output {
     height: 90%;
     padding: 0 5px;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 #output p {
